--- a/deployment/sandbox-v2/playbooks/reset/reset-softhsm.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-softhsm.yml
@@ -1,4 +1,4 @@
-- hosts: '{{cluster}}'
+- hosts: nfsserver
   gather_facts: no
   become: yes
   vars_prompt:
@@ -6,8 +6,14 @@
       prompt: 'Do you want to ERASE all SOFTHSM keys and data? Are you sure?'
       private: no
   tasks:
-   - name: Delete all softhsm  data 
+   - name: Delete all keymanager softhsm data
      file: 
-       path: '{{softhsm_base_path}}/'
+       path: '{{nfs.folder}}/softhsm/keymanager/'
+       state: absent     
+     when: sure.lower().strip() == 'yes'
+
+   - name: Delete all ida softhsm data
+     file: 
+       path: '{{nfs.folder}}/softhsm/ida/'
        state: absent     
      when: sure.lower().strip() == 'yes'
