[MOSIP-7350] updating BIO-SDK property parameters.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -101,17 +101,15 @@ ida.mapping.property.source=url:${mosip.ida.mapping.json-uri}
 #ida.iris.provider=ai.tech5.auth.service.T5AuthSDK
 #ida.composite.biometric.provider=ai.tech5.auth.service.T5AuthSDK
 
-#-------Proxy Bio SDK Integration ------------------------
+#-------Bio SDK Integration ------------------------
+mosip.biometric.sdk.provider.finger.classname=<fully qualified classname of Biometric SDK>
+mosip.biometric.sdk.provider.finger.version=<Biometric SDK version>
 
-ida.bio.sdk.integrator=io.mosip.authentication.common.service.impl.bioauth.BioMatcherIntegratorV1
+mosip.biometric.sdk.provider.iris.classname=<fully qualified classname of Biometric SDK>
+mosip.biometric.sdk.provider.iris.version=<Biometric SDK version>
 
-ida.fingerprint.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
-
-ida.face.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
-
-ida.iris.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
-
-ida.composite.biometric.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
+mosip.biometric.sdk.provider.face.classname=<fully qualified classname of Biometric SDK>
+mosip.biometric.sdk.provider.face.version=<Biometric SDK version>
 
 #---------------------------------ID-Authentication Salt Generator---------------------------------------------------#
 mosip.authentication.salt-generator.start-sequence=0
