[MOSIP-7350] updating config

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -345,3 +345,4 @@ kernel.uin.transfer-scheduler-days_of_week=*
 
 # Proxy otp
 mosip.kernel.auth.proxy-otp-value=111111
+mosip.security.provider.name=SunPKCS11-pkcs11-proxy
