--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -20,6 +20,12 @@ version=1.0
 
 application.id=pre-registration
 preregistration.preid.regex=[0-9]+
+#Age to be an adult
+mosip.adult.age=5
+
+#idschema version
+mosip.idschema.version=0.1
+
 
 # Demographic service
 demographic.service.version=v1
