[MOSIP-7350] updating properties.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -309,9 +309,9 @@ registration.processor.masterdata.validation.attributes = gender,region,province
 registration.processor.validateSchema=true
 registration.processor.validateFile=true
 registration.processor.validateChecksum=true
-registration.processor.validateApplicantDocument=false
-registration.processor.validateMasterData=false
-registration-processor.validatemandotary=false
+registration.processor.validateApplicantDocument=true
+registration.processor.validateMasterData=true
+registration-processor.validatemandotary=true
 
 registration.processor.document.category=idobject-document-category-mapping.json
 registration.processor.applicant.type=applicanttype-document-mapping.json
