--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -18,7 +18,7 @@
 - import_playbook: playbooks/admin.yml
 - import_playbook: playbooks/pms.yml
 - import_playbook: playbooks/resident.yml
-- {import_playbook: playbooks/os-hardening_console.yml, vars: {console1: console1}}
 - {import_playbook: playbooks/os-hardening_cluster.yml, vars: {cluster1: scancluster}}
+- {import_playbook: playbooks/security-reporting.yml, vars: {console1: console1, cluster1: scancluster}}
 - {import_playbook: playbooks/uninstall-scap.yml, vars: {cluster1: scancluster}}
 #- import_playbook: playbooks/healthtest.yml
