--- a/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
+++ b/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
@@ -45,3 +45,4 @@
             --report /tmp/oscap-report-after.html \
             --fetch-remote-resources \
             /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml
+      ignore_errors: yes
