--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -102,14 +102,14 @@ ida.mapping.property.source=url:${mosip.ida.mapping.json-uri}
 #ida.composite.biometric.provider=ai.tech5.auth.service.T5AuthSDK
 
 #-------Bio SDK Integration ------------------------
-mosip.biometric.sdk.provider.finger.classname=<fully qualified classname of Biometric SDK>
-mosip.biometric.sdk.provider.finger.version=<Biometric SDK version>
+mosip.biometric.sdk.provider.finger.classname=io.mosip.kernel.bioapi.impl.BioApiImpl
+mosip.biometric.sdk.provider.finger.version=0.8
 
-mosip.biometric.sdk.provider.iris.classname=<fully qualified classname of Biometric SDK>
-mosip.biometric.sdk.provider.iris.version=<Biometric SDK version>
+mosip.biometric.sdk.provider.iris.classname=io.mosip.kernel.bioapi.impl.BioApiImpl
+mosip.biometric.sdk.provider.iris.version=0.8
 
-mosip.biometric.sdk.provider.face.classname=<fully qualified classname of Biometric SDK>
-mosip.biometric.sdk.provider.face.version=<Biometric SDK version>
+mosip.biometric.sdk.provider.face.classname=io.mosip.kernel.bioapi.impl.BioApiImpl
+mosip.biometric.sdk.provider.face.version=0.8
 
 #---------------------------------ID-Authentication Salt Generator---------------------------------------------------#
 mosip.authentication.salt-generator.start-sequence=0
