Variable names improved.

--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-pvc.yaml
@@ -10,3 +10,6 @@ spec:
   resources:
     requests:
       storage: {{ .Values.pvc.size }} 
+  selector:
+    matchLabels:
+      name: {{ .Values.pv.name }} 
