--- a/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-dn-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-dn-pvc.yaml
@@ -15,3 +15,6 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.dataNode.size }}
+  selector:
+    matchLabels:
+      name: {{ include "hadoop.fullname" . }}-hdfs-dn
