--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
@@ -4,9 +4,13 @@ apiVersion: v1
 metadata:
   name: {{ .Values.pvc.name }} 
 spec:
-  storageClassName: manual
+  storageClassName: ""
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: {{ .Values.pvc.size }} 
+  selector:
+    matchLabels:
+      name: {{ .Values.pv.name }} 
+   
