--- a/deployment/sandbox-v2/playbooks/env.yml
+++ b/deployment/sandbox-v2/playbooks/env.yml
@@ -4,7 +4,7 @@
 - hosts: console
   gather_facts: true
   vars:
-    kube_config: '{{mz_kube_config}}'  # Deploy all these on mz cluster
+    kube_config: '{{clusters.mz.kube_config}}'  # Deploy all these on mz cluster
   roles:
      # Base MOSIP infra
      - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [ingress]}
@@ -17,7 +17,7 @@
 - hosts: console
   gather_facts: true
   vars:
-    kube_config: '{{dmz_kube_config}}'  # Deploy all these on mz cluster
+    kube_config: '{{clusters.dmz.kube_config}}'  # Deploy all these on mz cluster
   roles:
      # Base MOSIP infra
      - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [dmz-ingress]}
