--- a/deployment/sandbox-v2/playbooks/postgres.yml
+++ b/deployment/sandbox-v2/playbooks/postgres.yml
@@ -10,7 +10,7 @@
 # Install postgres and initialize it with tables and data
 - hosts: console
   roles:
-     - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', kube_config: '{{mz_kube_config}}',  tags: [postgres]}
+     - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', kube_config: '{{clusters.mz.kube_config}}',  tags: [postgres]}
   tasks:
     # TODO:  We are waiting here for postgres to settle down. This must be changed to 
     # a better check later
@@ -20,7 +20,7 @@
 
       # Forward local port to postgres service for external cluster access. Postgres service port is 80.
     - name: access postgres
-      shell: 'kubectl --kubeconfig={{mz_kube_config}} port-forward  --address 0.0.0.0 service/{{postgres.service_name}} {{postgres.local_port}}:80 > /dev/null 2>&1 &' 
+      shell: 'kubectl --kubeconfig={{clusters.mz.kube_config}} port-forward  --address 0.0.0.0 service/{{postgres.service_name}} {{postgres.local_port}}:80 > /dev/null 2>&1 &' 
       async: 5  
       poll: 0
 
