--- a/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-dn-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-dn-pv.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: {{ include "hadoop.fullname" . }}-hdfs-dn
+  labels:
+    name: {{ include "hadoop.fullname" . }}-hdfs-dn
 spec:
   storageClassName: {{ .Values.persistence.scName }} 
   capacity:
