--- a/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-pvc.yaml
@@ -15,3 +15,7 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.nameNode.size }}
+  selector:
+    matchLabels:
+      name: {{ include "hadoop.fullname" . }}-hdfs-nn
+   
