--- a/deployment/sandbox-v2/helm/charts/postgres/templates/pg-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/templates/pg-pv.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgress-pv 
+  name: {{ .Values.pv.name }} 
+  labels:
+    name: {{ .Values.pv.name }} 
 spec:
   storageClassName: {{ .Values.sc.name }} 
   capacity:
