--- a/deployment/sandbox-v2/playbooks/hdfs.yml
+++ b/deployment/sandbox-v2/playbooks/hdfs.yml
@@ -10,7 +10,7 @@
 - hosts: console
   gather_facts: true
   vars:
-    kube_config: '{{mz_kube_config}}'  # Deploy all these on mz cluster
+    kube_config: '{{clusters.mz.kube_config}}'  # Deploy all these on mz cluster
   roles:
      - {role: helm, install_name: 'hadoop', helm_chart: '{{charts_root}}/hadoop', tags: [hdfs]}
      - {role: hdfs-init,  tags: [hdfs-init]}
