--- a/deployment/sandbox-v2/playbooks/ida.yml
+++ b/deployment/sandbox-v2/playbooks/ida.yml
@@ -5,7 +5,7 @@
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{mz_kube_config}}' 
+    kube_config: '{{clusters.mz.kube_config}}' 
     helm_chart: '{{charts_root}}/ida'
     install_name: ida
   roles:
