--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -9,7 +9,7 @@
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{mz_kube_config}}' 
+    kube_config: '{{clusters.mz.kube_config}}' 
     helm_chart: '{{charts_root}}/kernel'
     install_name: kernel
   roles:
