--- a/deployment/sandbox-v2/playbooks/prereg.yml
+++ b/deployment/sandbox-v2/playbooks/prereg.yml
@@ -2,7 +2,7 @@
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{mz_kube_config}}' 
+    kube_config: '{{clusters.mz.kube_config}}' 
     helm_chart: '{{charts_root}}/prereg'
     install_name: prereg 
   roles:
