--- a/deployment/sandbox-v2/playbooks/regproc.yml
+++ b/deployment/sandbox-v2/playbooks/regproc.yml
@@ -10,7 +10,7 @@
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{dmz_kube_config}}' 
+    kube_config: '{{clusters.dmz.kube_config}}' 
     helm_chart: '{{charts_root}}/dmzregproc'
     install_name: dmzregproc
   roles:
@@ -20,7 +20,7 @@
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{mz_kube_config}}' 
+    kube_config: '{{clusters.mz.kube_config}}' 
     helm_chart: '{{charts_root}}/regproc'
     install_name: regproc 
   roles:
