--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -14,3 +14,9 @@
   roles:
     - {role: k8scluster/dashboard}
 
+- import_playbook: monitoring.yml
+  vars:
+    kube_config: '{{clusters.mz.kube_config}}'
+    mon_prop: '{{clusters.mz.monitoring}}' 
+  
+
