--- a/deployment/sandbox-v2/playbooks/dmzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/dmzcluster.yml
@@ -14,3 +14,7 @@
   roles:
     - {role: k8scluster/dashboard}
 
+- import_playbook: monitoring.yml
+  vars:
+    kube_config: '{{clusters.dmz.kube_config}}'
+    mon_prop: '{{clusters.dmz.monitoring}}' 
