--- a/deployment/sandbox-v2/playbooks/grafana.yml
+++ b/deployment/sandbox-v2/playbooks/grafana.yml
@@ -1,4 +1,4 @@
-# Playbook to enable monitoring on a cluster.
+# Playbook to enable grafana
 # Inputs:  
 #   mon_prop:  Monitor properties as in group_vars/all.yml
 #   kube_config
@@ -10,8 +10,7 @@
         state: directory
         mode: '777' 
       become: yes
-      with_items: '{{ mon_prop.nfs | dict2items }}'
-
+      with_items: '{{ mon_prop.nfs.grafana | dict2items }}'
 
 - hosts: console
   tasks:
@@ -23,14 +22,27 @@
         kind: Namespace
         state: present
 
+# Install Grafana
+
+# Apply custom config
+- hosts: console
+  gather_facts: false
+  tasks: 
+    - name: Apply grafana custom config
+      k8s:
+        src: '{{charts_root}}/grafana/config.yaml'
+        kubeconfig: '{{kube_config}}'
+        namespace: '{{ mon_prop.namespace }}'
+        state: present
+
 - hosts: console
   vars:
     kube_config: '{{kube_config}}'
-    install_name: 'prom'
-    helm_chart: '{{charts_root}}/prometheus'
+    install_name: 'graf'
+    helm_chart: 'stable/grafana'
     is_template: true  
     helm_namespace: '{{ mon_prop.namespace }}'
-    helm_values: '{{charts_root}}/prometheus/values.template.j2'
+    helm_values: '{{charts_root}}/grafana/values.template.j2'
   roles:
     - {role:  helm}
     
