--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -76,11 +76,13 @@ regproc:
 # Postgres persistent storage
 postgres:
   nfs_path: '{{nfs.folder}}/postgres'  # TODO: This should match with helm charts
+  size: 10Gi
   service_name: postgres # svc on Kubernetes
   server: mzworker0 # Nodeport
   local_port: 30090  # fixed for connecting from outside the cluster
   user: postgres
   password: postgres
+  max_connections: 1000
 
 # SFTP: used for picking up packets from DMZ
 sftp_user: 'sftpuser'  # This should be same in config files
