--- a/deployment/sandbox-v2/playbooks/postgres.yml
+++ b/deployment/sandbox-v2/playbooks/postgres.yml
@@ -7,16 +7,25 @@
   tasks:
     - {name: 'Create folder', file: {name: '{{postgres.nfs_path}}', state: directory}, become: yes}
 
-# Install postgres and initialize it with tables and data
+# Install postgres 
 - hosts: console
+  vars:
+    kube_config: '{{clusters.mz.kube_config}}'
+    install_name: 'postgres'
+    helm_chart: '{{charts_root}}/postgres'
+    is_template: true  
+    helm_namespace: 'default'
+    helm_values: '{{charts_root}}/postgres/values.template.j2'
   roles:
-     - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', kube_config: '{{clusters.mz.kube_config}}',  tags: [postgres]}
+    - {role:  helm}
+
+
   tasks:
     # TODO:  We are waiting here for postgres to settle down. This must be changed to 
     # a better check later
     - name: Waiting for postgres to install completely.
       pause:
-        seconds: 10
+        seconds: 30 
 
       # Forward local port to postgres service for external cluster access. Postgres service port is 80.
     - name: access postgres
@@ -24,7 +33,7 @@
       async: 5  
       poll: 0
 
-# Separate play to keep sequence
+# Separate play for init to keep sequence of execution
 - hosts: console
   roles:
      - {role: postgres-init, tags: [postgres-init]} 
