--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
@@ -14,7 +14,8 @@ metadata:
 
 spec:
   rules:
-  - http:
+  - host: {{ .Values.domain }}
+    http:
       paths:
       - path: /keycloak(/|$)(.*)
         backend:
