--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -7,6 +7,7 @@
 - import_playbook: playbooks/mzcluster.yml
 - import_playbook: playbooks/dmzcluster.yml
 - import_playbook: playbooks/postgres.yml
+- import_playbook: playbooks/keycloak.yml
 - import_playbook: playbooks/env.yml # MOSIP DB, Keycloak
 - import_playbook: playbooks/hdfs.yml
 - import_playbook: playbooks/config-server.yml    
